# openswebcad

./: .gitignore  README.md
.github/workflows/: python-app.yml
docker/docker/: Dockerfile
example/: Dockerfile  screw_muscad.py  screw_openscad.py  screw_solid.py
openswebcad/: annotations.py  cmdline.py  gui.py  parameters.py  plugin.py  test_parameter_parsing.py
src/openswebcad/: LICENSE.txt  README.md  pyproject.toml  pytest.ini
src/openswebcad/src/openswebcad/: __init__.py  generate.py  gui.py  run_gui.py
src/openswebcad/tests/: test_app.py
