[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "openswebcad"
dynamic = ["version"]
description = "Generate parametric STLs in a web interface using openscad"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["openscad", "stl"]
authors = [
  { name = "hephaisto" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
dependencies = [
    "pydantic",
    "nicegui",
]

[project.urls]
source = "https://github.com/hephaisto/openswebcad"

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"

[tool.hatch.envs.hatch-test]
dependencies = [
    "pytest-asyncio",
]


