[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "openswebcad"
dynamic = ["version"]
description = "Generate parametric STLs in a web interface using openscad"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["openscad", "stl"]
authors = [
  { name = "hephaisto" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
dependencies = [
    "pydantic",
    "nicegui",
]

[project.urls]
source = "https://github.com/hephaisto/openswebcad"

[project.scripts]
openswebcad = "openswebcad.run_gui:main"
openswebcad-cli = "openswebcad.cmdline:main"

[tool.pdm.version]
source = "scm"

